--- a/src/main/java/com/dyw/client/functionForm/EquipmentFunction.form
+++ b/src/main/java/com/dyw/client/functionForm/EquipmentFunction.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dyw.client.functionForm.EquipmentFunction">
   <grid id="27dc6" binding="equipmentFunction" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="500" height="415"/>
+      <xy x="20" y="20" width="500" height="491"/>
     </constraints>
     <properties>
       <preferredSize width="640" height="480"/>
@@ -59,7 +59,7 @@
           <text value="密码"/>
         </properties>
       </component>
-      <component id="f6270" class="javax.swing.JTextField" binding="equipmenNameText">
+      <component id="f6270" class="javax.swing.JTextField" binding="equipmentNameText">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -110,7 +110,7 @@
       </component>
       <component id="8a287" class="javax.swing.JPasswordField" binding="equipmentPassText">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
           <gridbag top="0" left="0" bottom="30" right="0" weightx="0.0" weighty="0.0"/>
@@ -122,7 +122,7 @@
       </component>
       <component id="20265" class="javax.swing.JButton" binding="equipmentConfirmButton">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
@@ -131,11 +131,30 @@
       </component>
       <component id="eceed" class="javax.swing.JButton" binding="equipmentCancelButton">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <text value="取消"/>
+        </properties>
+      </component>
+      <component id="5190b" class="javax.swing.JLabel" binding="equipmentAreaLabel">
+        <constraints>
+          <grid row="5" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag top="0" left="0" bottom="30" right="50" weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <font size="24"/>
+          <text value="区域"/>
+        </properties>
+      </component>
+      <component id="b344d" class="javax.swing.JComboBox" binding="equipmentAreaCombo">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag top="0" left="0" bottom="30" right="0" weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties>
+          <font size="26"/>
         </properties>
       </component>
     </children>
