--- a/src/main/java/com/dyw/client/form/ProtectionForm.form
+++ b/src/main/java/com/dyw/client/form/ProtectionForm.form
@@ -17,7 +17,8 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="15baf" binding="intelligentApplicationPanel" layout-manager="GridBagLayout">
+          <grid id="15baf" binding="intelligentApplicationPanel" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="智能应用"/>
             </constraints>
@@ -27,7 +28,6 @@
               <grid id="a86c1" binding="livePreviewPanel" layout-manager="GridBagLayout">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                  <gridbag weightx="0.5" weighty="1.0"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -56,10 +56,13 @@
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="1.0" weighty="0.9"/>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <preferredSize width="480" height="270"/>
+                    </properties>
                     <border type="none"/>
                     <children>
-                      <grid id="793bf" binding="livePreviewContentOnePanel" layout-manager="GridBagLayout">
+                      <grid id="793bf" binding="livePreviewContentOnePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                        <margin top="0" left="0" bottom="0" right="0"/>
                         <constraints>
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                           <gridbag top="5" left="5" bottom="5" right="5" weightx="0.5" weighty="0.25"/>
@@ -154,14 +157,13 @@
               <grid id="f9c7a" binding="blackAlarmPanel" layout-manager="GridBagLayout">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                  <gridbag weightx="0.25" weighty="1.0"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
                 <children>
                   <grid id="acc56" binding="blackAlarmTitlePanel" layout-manager="GridBagLayout">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="4" fill="2" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="1.0" weighty="0.1"/>
                     </constraints>
                     <properties/>
@@ -169,11 +171,30 @@
                     <children>
                       <component id="dd566" class="javax.swing.JLabel" binding="blackAlarmTitleLabel">
                         <constraints>
-                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                           <gridbag weightx="0.0" weighty="0.0"/>
                         </constraints>
                         <properties>
                           <text value="黑名单报警"/>
+                        </properties>
+                      </component>
+                      <component id="d36a0" class="javax.swing.JCheckBox" binding="blackAlarmRollingCheckBOx">
+                        <constraints>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                          <gridbag weightx="0.0" weighty="0.0"/>
+                        </constraints>
+                        <properties>
+                          <selected value="true"/>
+                          <text value="是否滚动"/>
+                        </properties>
+                      </component>
+                      <component id="6742a" class="javax.swing.JButton" binding="blackAlarmClearButton">
+                        <constraints>
+                          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                          <gridbag weightx="0.0" weighty="0.0"/>
+                        </constraints>
+                        <properties>
+                          <text value="清空页面"/>
                         </properties>
                       </component>
                     </children>
@@ -197,7 +218,7 @@
                           <component id="9cee8" class="javax.swing.JTable" binding="blackAlarmContentTable">
                             <constraints/>
                             <properties>
-                              <rowHeight value="160"/>
+                              <rowHeight value="150"/>
                             </properties>
                           </component>
                         </children>
@@ -209,14 +230,13 @@
               <grid id="e1e6b" binding="whiteAlarmPanel" layout-manager="GridBagLayout">
                 <constraints>
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                  <gridbag weightx="0.25" weighty="1.0"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
                 <children>
                   <grid id="f2147" binding="whiteAlarmTitlePanel" layout-manager="GridBagLayout">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="4" fill="2" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="1.0" weighty="0.1"/>
                     </constraints>
                     <properties/>
@@ -229,6 +249,25 @@
                         </constraints>
                         <properties>
                           <text value="白名单报警"/>
+                        </properties>
+                      </component>
+                      <component id="757a6" class="javax.swing.JCheckBox" binding="whiteAlarmRollingCheckBOx">
+                        <constraints>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <gridbag weightx="0.0" weighty="0.0"/>
+                        </constraints>
+                        <properties>
+                          <selected value="true"/>
+                          <text value="是否滚动"/>
+                        </properties>
+                      </component>
+                      <component id="7c16" class="javax.swing.JButton" binding="whiteAlarmClearButton">
+                        <constraints>
+                          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                          <gridbag weightx="0.0" weighty="0.0"/>
+                        </constraints>
+                        <properties>
+                          <text value="清空页面"/>
                         </properties>
                       </component>
                     </children>
@@ -251,7 +290,9 @@
                         <children>
                           <component id="123e7" class="javax.swing.JTable" binding="whiteAlarmContentTable">
                             <constraints/>
-                            <properties/>
+                            <properties>
+                              <rowHeight value="150"/>
+                            </properties>
                           </component>
                         </children>
                       </scrollpane>
@@ -262,14 +303,13 @@
               <grid id="5dc71" binding="snapAlarmPanel" layout-manager="GridBagLayout">
                 <constraints>
                   <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                  <gridbag weightx="0.05" weighty="1.0"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
                 <children>
                   <grid id="afb17" binding="snapAlarmTitlePanel" layout-manager="GridBagLayout">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="4" fill="2" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="1.0" weighty="0.1"/>
                     </constraints>
                     <properties/>
@@ -282,6 +322,25 @@
                         </constraints>
                         <properties>
                           <text value="人脸抓拍"/>
+                        </properties>
+                      </component>
+                      <component id="2609d" class="javax.swing.JCheckBox" binding="snapAlarmRollingCheckBOx">
+                        <constraints>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <gridbag weightx="0.0" weighty="0.0"/>
+                        </constraints>
+                        <properties>
+                          <selected value="true"/>
+                          <text value="是否滚动"/>
+                        </properties>
+                      </component>
+                      <component id="b5a7f" class="javax.swing.JButton" binding="snapAlarmClearButton">
+                        <constraints>
+                          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                          <gridbag weightx="0.0" weighty="0.0"/>
+                        </constraints>
+                        <properties>
+                          <text value="清空页面"/>
                         </properties>
                       </component>
                     </children>
@@ -306,7 +365,7 @@
                             <constraints/>
                             <properties>
                               <autoscrolls value="true"/>
-                              <rowHeight value="160"/>
+                              <rowHeight value="150"/>
                             </properties>
                           </component>
                         </children>
